# anlearn

./: .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  shell.nix  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
anlearn/: __init__.py  _typing.py  loda.py  stats.py  utils.py
assets/css/: main.css
dev-guide/: index.html
docs/: api.rst  conf.py  dev-guide.md  dev-guide.rst  index.md  index.rst  intro.rst  jupyter-notebooks.md  loda.md  loda.rst  requirements.txt
docs/_templates/: module.rst
docs/reference/: loda.md  stats.md
examples/: README.rst  loda_large_dataset.py  plot_loda_projections.py  plot_loda_zoo_dataset.py  plot_sklearn_anomaly_detection_methods_comparison.py
jupyter-notebooks/: index.html
loda/: index.html
nix/: sources.json
notebooks/: sklearn_anomaly_detection_methods_comparison.ipynb
reference/loda/: index.html
reference/stats/: index.html
requirements/: requirements-3.6-dev.txt  requirements-3.6.txt  requirements-3.7-dev.txt  requirements-3.7.txt  requirements-3.8-dev.txt  requirements-3.8-docs.txt  requirements-3.8.txt  requirements-dev.in  requirements-docs.in  requirements-notebook.in  requirements-notebook.txt
scripts/: upgrade_pip.sh
search/: search_index.json
tests/: test_loda.py  test_utils.py
